# organize-photos

./: README.md  SPEC.md  pyproject.toml
organize_photos/: cli.py  utils.py
tests/: test_cli.py  test_utils.py
