[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["organize_photos"]

[project]
name = "organize_photos"
version = "0.1.0"
description = "A CLI tool to organize photos by date and find duplicates."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = ["click", "tqdm", "Pillow"]

[project.urls]
Homepage = "https://github.com/example/organize-photos"
Repository = "https://github.com/example/organize-photos"

[project.scripts]
organize-photos = "organize_photos.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "piexif"]
